css do login e do index modificados

--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -1,136 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="/img/icon.ico">
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <script src="/javascript.js"></script>
-    <link rel="shortcut icon" href="/img/logoeco.png">
-    <title>Home</title>
-
-  
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="style2.css"/>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+ 
 </head>
-<body onload="showSlides(0)">
-   <header class="black">
-        <!-- Logo -->
-        <img src="/img/logo.png" alt="Logo" class="logo">
-        <!-- Menu -->
-        <nav>
-            <a href="recursos.html">Recursos</a>
-            <a href="privacidade.html">Privacidade</a>
-            <a href="centraldeajuda.html">Central de Ajuda</a>
-            <a href="baixar.html">Baixar</a>
-        </nav>
-       <br>       <br>
-
-
-       
-    </header>
+<body>
+  <!-- Cabeçalho -->
+  <header></header>
+  <header class="black">
+    <!-- Logo -->
+    <img src="/img/logo.png" alt="Logo" class="logo">
+    <!-- Menu -->
+    <nav>
+      <a href="recursos.html">Recursos</a>
+      <a href="privacidade.html">Privacidade</a>
+      <a href="centraldeajuda.html">Central de Ajuda</a>
+      <a href="baixar.html">Baixar</a>
+    </nav>
+  </header>
   <div class="div-container">
     <div class="text-container"><br>
-      <p class="titulo">Bem-vindo ao EcoTech:</p>
-      <p class="subtitulo">Seu guia inteligente para um estilo <br> de vida sustentável</p>
-      <p class="texto1">Mais que um aplicativo, uma comunidade comprometida <br> com a sustentabilidade. 
-        <br> Facilitamos a busca por pontos de coleta, promovendo <br> práticas ecológicas, incentivando mudanças positivas.</p>
+      <p class="titulo"> Bem-vindo ao EcoTech: </p>
+      <p class="subtitulo"> Seu guia inteligente para um estilo <br> de vida sustentável </p>
+      <p class="texto1"> Mais que um aplicativo, uma comunidade comprometida <br> com a sustentabilidade. 
+      <br> Facilitamos a busca por pontos de coleta, promovendo <br> práticas ecológicas, incentivando mudanças positivas. </p>
     </div>
     <img src="/img/logoeco.png" alt="Logo Eco" class="logo-eco">
   </div>
-  
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
- 
- <div class="slide-navigation">
-			    <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
-			    
-			  </div>
-			  <div class="slideshow-container">
-			    <div class="mySlides fade">
-			      <img src="/img/imagem1.png" alt="Imagem 1">
-			      <div class="slide-text" style="font-size: 150%;">Localização simples e rápida </div>
-			      <div class="slide-text2" style="top:-15%">Encontre pontos de coleta próximos em questão de segundos</div>
-			    </div>
-			  
-			    <div class="mySlides fade">
-			      <img src="/img/imagem2.png" alt="Imagem 2">
-			      <div class="slide-text" style="font-size: 150%;">Detalhes abrangentes </div>
-			      <div class="slide-text2" style="top:-15%"> Informações detalhadas sobre cada ponto de coleta </div>
-			    </div>
-			  
-			    <div class="mySlides fade">
-			      <img src="/img/imagem3.jpg" alt="Imagem 3">
-			      <div class="slide-text" style="font-size: 150%;">Descubra o caminho certo </div>
-			      <div class="slide-text2" style="top:-15%">Identifique o grupo de reciclagem para seus resíduos </div>
-			    </div>
-			  </div>
-			  
-			  <br><br><br><br>
-			  <div style="text-align:center">
-			    <span class="dot" onclick="currentSlide(1)"></span>
-			    <span class="dot" onclick="currentSlide(2)"></span>
-			    <span class="dot" onclick="currentSlide(3)"></span>
-			  </div>
-			  <div class="next" onclick="plusSlides(1)">&#10095;</div> 
-			  </div>
-			  </div>
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="/img/imagem1.png" alt="Imagem 1">
+      <div class="slide-text" style="font-size: 150%;">Localização simples e rápida </div>
+      <div class="slide-text2" style="top:-15%">Encontre pontos de coleta próximos em questão de segundos</div>
+    </div>
   
+    <div class="mySlides fade">
+      <img src="/img/imagem2.png" alt="Imagem 2">
+      <div class="slide-text" style="font-size: 150%;">Detalhes abrangentes </div>
+      <div class="slide-text2" style="top:-15%"> Informações detalhadas sobre cada ponto de coleta </div>
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="/img/imagem3.png" alt="Imagem 3">
+      <div class="slide-text" style="font-size: 150%;">Descubra o caminho certo </div>
+      <div class="slide-text2" style="top:-15%">Identifique o grupo de reciclagem para seus resíduos </div>
+    </div>
+  </div>
 
-<div id="bottomInf">
-	  <img src="/img/celular1.png"  class="imagem2">
- <div class="titulo2">
-	 
+  <br><br><br><br><br><br>
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+<div class="slide-navigation">
+  <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+  <div class="next" onclick="plusSlides(1)">&#10095;</div>
+</div>
+    </div>
+  
+  <div class="titulo2">
     <h2>Faça Parte da Mudança - Baixe Agora</h2>
     <h5 style="color:#303030";>Transforme suas escolhas diárias em ações positivas para o planeta. 
-      <br> Junte-se à comunidade EcoTech - Baixe agora e embarque nesta <br> jornada rumo a um futuro mais sustentável! 🌳🌏</h5>
-  </div>
-   
-   <?xml version="1.0" standalone="no"?>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#82ae64" fill-opacity="1" d="M0,192L60,186.7C120,181,240,171,360,192C480,213,600,267,720,240C840,213,960,107,1080,58.7C1200,11,1320,21,1380,26.7L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
- 
-
-  </svg>  
+      Junte-se à comunidade EcoTech - Baixe agora e embarque nesta jornada rumo a um futuro mais sustentável! 🌳🌏</h5>
+    </div>
   
-</div>
- <footer>
-    <!-- Seção de suporte -->
-    <div class="footer-section">
-        <h3>Suporte</h3>
-        <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Fale Conosco</a></li>
-        </ul>
-    </div>
 
-    <!-- Seção de redes sociais -->
-    <div class="footer-section">
-        <h3>Redes Sociais</h3>
-        <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
-        </ul>
+    <img src="/img/celular1.png" class="imagem2 celular-image">
+  <?xml version="1.0" standalone="no"?>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#82ae64" fill-opacity="1" d="M0,192L60,186.7C120,181,240,171,360,192C480,213,600,267,720,240C840,213,960,107,1080,58.7C1200,11,1320,21,1380,26.7L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+  <footer>
+    <div class="footer-content">
+        <div class="footer-section">
+            <h3>Suporte</h3>
+            <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Fale Conosco</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Redes Sociais</h3>
+            <ul class="social-icons">
+                <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Intranet</h3>
+            <ul>
+            <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li><br><br><br><br><br><br>
+            </ul>
+        </div>
     </div>
-
-    <!-- Seção de intranet -->
-    <div class="footer-section">
-        <h3>Intranet</h3>
-        <ul>
-            <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li>
-        </ul>
-    </div>
-
-    <!-- Linha divisória -->
     <hr>
-
-    <!-- Seção inferior do rodapé -->
     <div class="footer-bottom">
         <div class="footer-left">
             <p style="font-size: larger;">Brasil</p>
@@ -138,8 +109,42 @@
         <div class="footer-links">
             <a href="#">Política de Privacidade</a>
             <a href="#">Termos de Uso</a>
-        </div>
+        </div>               
+    </div>
     </div>
 </footer>
+<script>
+  var slideIndex = 1;
+
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) { slideIndex = 1 }
+    if (n < 1) { slideIndex = slides.length }
+    for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex - 1].style.display = "block";
+    dots[slideIndex - 1].className += " active";
+  }
+
+  function plusSlides(n) {
+    showSlides(slideIndex += n);
+  }
+
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
+  }
+
+  setInterval(function () {
+    plusSlides(1);
+  }, 5000);
+
+  showSlides(slideIndex);
+</script>
 </body>
 </html>
