--- a/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style2.css">
     <script src="https://kit.fontawesome.com/a11b8c2525.js" crossorigin="anonymous"></script>
     <script src="/javascript.js"></script>
-    <link rel="shortcut icon" href="/img/logoeco.png">
+    <link rel="shortcut icon" href="/img/icone.ico">
     <title>Login</title>
 </head>
 <body>
@@ -17,86 +17,36 @@
         <!-- Menu -->
         <nav>
             <a href="/ecotech/cliente/index">Home</a>
-            
         </nav>
-       <br>       <br>
-
-
-       
+        <br><br>
     </header>
 
-
     <main>
-      <br><br><br><br><br><br>
-            <div class="login-box"><br><br>
-                <h2>Insira seu E-mail para se cadastrar ou entrar</h2><br><br>
-                <form th:action="@{/ecotech/cliente/login}" th:object="${usuario}" method="post" class="loginForm">
-                    <h4>Insira seu E-mail</h4>
-                    <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
-                    <br><h4>Insira sua senha</h4>
-                    <div class="password-input">
-                        <input type="password" name="senha" id="senha" placeholder="Senha" required th:field="*{senha}">
-                        <span class="toggle-password" onclick="togglePasswordVisibility()">
-                            <i id="toggleIcon" class="fas fa-eye"></i>
-                        </span>
-                        <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha"><br>Criar Conta</a>
-                    </div>
+        <br><br><br><br><br><br>
+        <div class="login-box">
+            <h2 class="login-title">Insira seu E-mail para se cadastrar ou entrar</h2><br>
+            <form th:action="@{/ecotech/cliente/login}" th:object="${usuario}" method="post" class="loginForm">
+                <h4>Insira seu E-mail</h4>
+                <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
+                <br><h4>Insira sua senha</h4>
+                <div class="password-input">
+                    <input type="password" name="senha" id="senha" placeholder="Senha" required th:field="*{senha}">
+                    <span class="toggle-password" onclick="togglePasswordVisibility()">
+                        <i id="toggleIcon" class="fas fa-eye"></i>
+                    </span>
+                    <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha">Criar Conta</a>
                     
-                    <br><br><br><br>
-                  
-                        
-                        <input type="submit" value="continuar"  style="margin: 0 auto;
-                        background-color: #161616; /* Cor de fundo do botão */
-                        color: #fff;
-                        left: 48%;
-                        border: none;
-                        padding: 15px 40px;
-                        border-radius: 5px;
-                        cursor: pointer;
-                        margin: 0 auto; text-decoration: none" >
-                </form><br><br><br>
-            </div>
+                </div>
+
+                <br><br><br><br>
+
+                <input type="submit" value="continuar" class="login_button">
+            </form><br><br><br>
+        </div>
     </main>
-        <br><br><br><br><br><br><br><br><br><br><br>
-        <script>
-            function togglePasswordVisibility() {
-                const senhaInput = document.getElementById('senha');
-                
-                if (senhaInput.type === 'password') {
-                    senhaInput.type = 'text';
-                } else {
-                    senhaInput.type = 'password';
-                }
-            }
-                function togglePasswordVisibility() {
-                    const senhaInput = document.getElementById('senha');
-                    const toggleButton = document.querySelector('.toggle-password');
-                    
-                    if (senhaInput.type === 'password') {
-                        senhaInput.type = 'text';
-                        toggleButton.innerHTML = '<i class="fas fa-eye-slash"></i>';
-                    } else {
-                        senhaInput.type = 'password';
-                        toggleButton.innerHTML = '<i class="fas fa-eye"></i>';
-                    }
-                }
-            </script>
+    
     <footer>
         <div class="footer-content">
-            <div class="footer-section">
-                <h3>Produtos</h3>
-                <ul>
-                    <li><a href="#">Smartphones</a></li>
-                    <li><a href="#">Notebooks</a></li>
-                    <li><a href="#">Smartwatches e Buds</a></li>
-                    <li><a href="#">Tablets</a></li>
-                    <li><a href="#">Acessórios</a></li>
-                    <li><a href="#">TV e AV</a></li>
-                    <li><a href="#">Eletrodomésticos</a></li>
-                    <li><a href="#">Monitores</a></li>
-                    <li><a href="#">Ar-condicionados</a></li>
-                </ul>
-            </div>
             <div class="footer-section">
                 <h3>Suporte</h3>
                 <ul>
@@ -107,17 +57,15 @@
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
                 <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
                 </ul>
             </div>
             <div class="footer-section">
-                <h3>Formas de Pagamento</h3>
-                <ul class="payment-icons">
-                    <img src="/img/mastercard.png" alt="Visa">
-                    <img src="/img/visa.png" alt="MasterCard">
-                    <img src="/img/pix.png" alt="MasterCard">
+                <h3>Intranet</h3>
+                <ul>
+                    <li><a href="#">Acesso funcionário</a></li>
                 </ul>
             </div>
         </div>
@@ -129,9 +77,22 @@
             <div class="footer-links">
                 <a href="#">Política de Privacidade</a>
                 <a href="#">Termos de Uso</a>
-            </div>               
-        </div>
+            </div>
         </div>
     </footer>
+    <script>
+        function togglePasswordVisibility() {
+            const senhaInput = document.getElementById('senha');
+            const toggleButton = document.querySelector('.toggle-password');
+
+            if (senhaInput.type === 'password') {
+                senhaInput.type = 'text';
+                toggleButton.innerHTML = '<i class="fas fa-eye-slash"></i>';
+            } else {
+                senhaInput.type = 'password';
+                toggleButton.innerHTML = '<i class="fas fa-eye"></i>';
+            }
+        }
+    </script>
 </body>
 </html>
