--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
   
 
     <img src="/img/celular1.png" class="imagem2 celular-image">
-  <?xml version="1.0" standalone="no"?>
+  <li?xml version="1.0" standalone="no"?>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#82ae64" fill-opacity="1" d="M0,192L60,186.7C120,181,240,171,360,192C480,213,600,267,720,240C840,213,960,107,1080,58.7C1200,11,1320,21,1380,26.7L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
   <footer>
     <div class="footer-content">
@@ -97,7 +97,9 @@
         <div class="footer-section">
             <h3>Intranet</h3>
             <ul>
-            <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li><br><br><br><br><br><br>
+            <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li>
+            <li><a href="/ecotech/ecoponto/perfil">Acesso dono de Ecoponto</a></li><br><br><br><br><br><br>
+            
             </ul>
         </div>
     </div>
