--- a/ecotech2/src/main/resources/templates/donoEcoponto/login.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/login.html
@@ -25,7 +25,7 @@
         <br><br><br><br><br><br>
         <div class="login-box">
             <h2 class="login-title">Insira seu E-mail para se cadastrar ou entrar</h2><br>
-            <form th:action="@{/ecotech/cliente/login}" th:object="${usuario}" method="post" class="loginForm">
+            <form th:action="@{/ecotech/ecoponto/login}" th:object="${local}" method="post" class="loginForm">
                 <h4>Insira seu E-mail</h4>
                 <input type="email" name="email" id="email" placeholder="E-mail" required th:field="*{email}">
                 <br><h4>Insira sua senha</h4>
