--- a/ecotech2/src/main/resources/templates/intranet/perfil/CadastrarCliente.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/CadastrarCliente.html
@@ -51,47 +51,40 @@
 
 
     </main>
-<footer>
-    <!-- Seção de suporte -->
-    <div class="footer-section">
-        <h3>Suporte</h3>
-        <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Fale Conosco</a></li>
-        </ul>
-    </div>
-
-    <!-- Seção de redes sociais -->
-    <div class="footer-section">
-        <h3>Redes Sociais</h3>
-        <ul class="social-icons">
-            <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
-            <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
-            <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
-        </ul>
-    </div>
-
-    <!-- Seção de intranet -->
-    <div class="footer-section">
-        <h3>Intranet</h3>
-        <ul>
-            <li><a href="/ecotech/locais/todos-locais">Acesso funcionário</a></li>
-        </ul>
-    </div>
-
-    <!-- Linha divisória -->
-    <hr>
-
-    <!-- Seção inferior do rodapé -->
-    <div class="footer-bottom">
-        <div class="footer-left">
-            <p style="font-size: larger;">Brasil</p>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Suporte</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Fale Conosco</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Redes Sociais</h3>
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Intranet</h3>
+                <ul>
+                    <li><a href="#">Acesso funcionário</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="footer-links">
-            <a href="#">Política de Privacidade</a>
-            <a href="#">Termos de Uso</a>
+        <hr>
+        <div class="footer-bottom">
+            <div class="footer-left">
+                <p style="font-size: larger;">Brasil</p>
+            </div>
+            <div class="footer-links">
+                <a href="#">Política de Privacidade</a>
+                <a href="#">Termos de Uso</a>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 </body>
 </html>
