--- a/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/Login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -34,7 +34,7 @@
                     <span class="toggle-password" onclick="togglePasswordVisibility()">
                         <i id="toggleIcon" class="fas fa-eye"></i>
                     </span>
-                    <a href="/ecotech/cliente/novo-cliente" class="esqueci-senha">Criar Conta</a>
+                    <a href="/ecotech/cliente/novo-cliente" class="criar-conta">Criar Conta</a>
                     
                 </div>
 
