--- a/ecotech2/src/main/resources/static/style.css
+++ b/ecotech2/src/main/resources/static/style.css
@@ -196,35 +196,62 @@
   
 	main{flex:1}
  
-    
-    
-    footer {
-	 
-        background-color: #000;
-        color: #fff;
-        padding: 15px 0px;
-        padding:1%;
+  footer {
+    background-color: #000;
+    color: #fff;
+    padding: 15px 0px;
+    padding:1%;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin-left: 450px;;
+}
+
+.footer-products, .footer-values {
+    flex: 1;
+    margin-right: 0%;
+}
+
+.footer-products h3, .footer-values h3 {
+    font-size: 30px;
+    margin-bottom: 35px;
+}
+
+.footer-section {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.footer-section h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 100px;
+}
+
+.footer-left {
+  margin-left: 14px;
+}
+
+.footer-links a {
+  color: #fff;
+  text-decoration: none;
+
+  margin-left: -215%
+}
+
+.footer-links a:hover {
+    text-decoration: underline;
+}
    
-        
-        
-    }
-    
-    .footer-content {
-        display: flex;
-        justify-content: space-between;
-        max-width: 1200px;
-        margin: 0 auto;
-    }
-    
-    .footer-products, .footer-values {
-        flex: 1;
-        margin-right: 20px;
-    }
-    
-    .footer-products h3, .footer-values h3 {
-        font-size: 30px;
-        margin-bottom: 5px;
-    }
     
     ul {
         list-style: none;
@@ -242,16 +269,6 @@
     
     ul li a:hover {
         text-decoration: underline;
-    }
-    
-    .footer-section {
-        flex: 1;
-        margin-right: 20px;
-    }
-    
-    .footer-section h3 {
-        font-size: 18px;
-        margin-bottom: 10px;
     }
     
     .social-icons, .payment-icons {
@@ -281,26 +298,6 @@
         margin-top: 20px;
     }
     
-    .footer-bottom {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 10px;
-    }
-    
-    .footer-left {
-        margin-left: 20px;
-    }
-    
-    .footer-links a {
-        color: #fff;
-        text-decoration: none;
-        margin-right: 300px;
-    }
-    
-    .footer-links a:hover {
-        text-decoration: underline;
-    }
      .black {
       position: sticky;
       top: 0;
