--- a/ecotech2/src/main/resources/templates/intranet/perfil/EditarPerfil.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/EditarPerfil.html
@@ -63,20 +63,6 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Produtos</h3>
-                <ul>
-                    <li><a href="#">Smartphones</a></li>
-                    <li><a href="#">Notebooks</a></li>
-                    <li><a href="#">Smartwatches e Buds</a></li>
-                    <li><a href="#">Tablets</a></li>
-                    <li><a href="#">Acessórios</a></li>
-                    <li><a href="#">TV e AV</a></li>
-                    <li><a href="#">Eletrodomésticos</a></li>
-                    <li><a href="#">Monitores</a></li>
-                    <li><a href="#">Ar-condicionados</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
                 <h3>Suporte</h3>
                 <ul>
                     <li><a href="#">FAQ</a></li>
@@ -86,17 +72,15 @@
             <div class="footer-section">
                 <h3>Redes Sociais</h3>
                 <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-whatsapp" style="font-size:24px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram" style="font-size:24px"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" style="font-size:24px"></i></a></li>
                 </ul>
             </div>
             <div class="footer-section">
-                <h3>Formas de Pagamento</h3>
-                <ul class="payment-icons">
-                    <img src="/img/mastercard.png" alt="Visa">
-                    <img src="/img/visa.png" alt="MasterCard">
-                    <img src="/img/pix.png" alt="MasterCard">
+                <h3>Intranet</h3>
+                <ul>
+                    <li><a href="#">Acesso funcionário</a></li>
                 </ul>
             </div>
         </div>
@@ -108,8 +92,7 @@
             <div class="footer-links">
                 <a href="#">Política de Privacidade</a>
                 <a href="#">Termos de Uso</a>
-            </div>               
-        </div>
+            </div>
         </div>
     </footer>
 </body>
