--- a/ecotech2/src/main/resources/templates/donoEcoponto/perfilDono.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/perfilDono.html
@@ -35,7 +35,7 @@
 				
                 <img src="/img/logoeco.png"  id="profilePicture"><br><br><br>
                 <a href="/ecotech/ecoponto/editar">Editar</a><br>
-                <a href="/ecotech/cliente/logout" id="logOut">LogOut</a><br>
+                <a href="/ecotech/ecoponto/logout" id="logOut">LogOut</a><br>
                 <a href="/ecotech/cliente/excluir" id="logOut">Excluir conta</a><br>
             </div>
             <div id="profile_infsBox"> 
