--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -25,6 +25,8 @@
       <a href="baixar.html">Baixar</a>
     </nav>
   </header>
+  
+  
   <div class="div-container">
     <div class="text-container"><br>
       <p class="titulo"> Bem-vindo ao EcoTech: </p>
@@ -34,7 +36,11 @@
     </div>
     <img src="/img/logoeco.png" alt="Logo Eco" class="logo-eco">
   </div>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br>
+  <div class="slide-navigation">
+  <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
+ 
+</div>
   <div class="slideshow-container">
     <div class="mySlides fade">
       <img src="/img/imagem1.png" alt="Imagem 1">
@@ -55,16 +61,13 @@
     </div>
   </div>
 
-  <br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br><br><br>
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
 </div>
 <div class="slide-navigation">
-  <div class="prev" onclick="plusSlides(-1)">&#10094;</div>
-  <div class="next" onclick="plusSlides(1)">&#10095;</div>
-</div>
     </div>
   
   <div class="titulo2">
@@ -73,7 +76,6 @@
       Junte-se à comunidade EcoTech - Baixe agora e embarque nesta jornada rumo a um futuro mais sustentável! 🌳🌏</h5>
     </div>
   
-
     <img src="/img/celular1.png" class="imagem2 celular-image">
   <li?xml version="1.0" standalone="no"?>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#82ae64" fill-opacity="1" d="M0,192L60,186.7C120,181,240,171,360,192C480,213,600,267,720,240C840,213,960,107,1080,58.7C1200,11,1320,21,1380,26.7L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
