--- a/ecotech2/src/main/resources/templates/indexfix/index.html
+++ b/ecotech2/src/main/resources/templates/indexfix/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="/style2.css"/>
+  <link rel="stylesheet" type="text/css" href="style2.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
  
@@ -16,7 +16,7 @@
   <header></header>
   <header class="black">
     <!-- Logo -->
-    <img src="/img/logo.png" alt="Logo" class="logo">
+    <img src="logo.png" alt="Logo" class="logo">
     <!-- Menu -->
     <nav>
       <a href="recursos.html">Recursos</a>
@@ -34,7 +34,7 @@
       <p class="texto1"> Mais que um aplicativo, uma comunidade comprometida <br> com a sustentabilidade. 
       <br> Facilitamos a busca por pontos de coleta, promovendo <br> práticas ecológicas, incentivando mudanças positivas. </p>
     </div>
-    <img src="/img/logoeco.png" alt="Logo Eco" class="logo-eco">
+    <img src="logoeco.png" alt="Logo Eco" class="logo-eco">
   </div>
   <br><br><br><br><br><br><br><br><br>
   <div class="slide-navigation">
@@ -43,19 +43,19 @@
 </div>
   <div class="slideshow-container">
     <div class="mySlides fade">
-      <img src="/img/imagem1.png" alt="Imagem 1">
+      <img src="imagem1.png" alt="Imagem 1">
       <div class="slide-text" style="font-size: 150%;">Localização simples e rápida </div>
       <div class="slide-text2" style="top:-15%">Encontre pontos de coleta próximos em questão de segundos</div>
     </div>
   
     <div class="mySlides fade">
-      <img src="/img/imagem2.png" alt="Imagem 2">
+      <img src="imagem2.png" alt="Imagem 2">
       <div class="slide-text" style="font-size: 150%;">Detalhes abrangentes </div>
       <div class="slide-text2" style="top:-15%"> Informações detalhadas sobre cada ponto de coleta </div>
     </div>
   
     <div class="mySlides fade">
-      <img src="/img/imagem3.png" alt="Imagem 3">
+      <img src="imagem3.png" alt="Imagem 3">
       <div class="slide-text" style="font-size: 150%;">Descubra o caminho certo </div>
       <div class="slide-text2" style="top:-15%">Identifique o grupo de reciclagem para seus resíduos </div>
     </div>
@@ -76,9 +76,8 @@
       Junte-se à comunidade EcoTech - Baixe agora e embarque nesta jornada rumo a um futuro mais sustentável! 🌳🌏</h5>
     </div>
   
-    <img src="/img/celular1.png" class="imagem2 celular-image">
-  <li?xml version="1.0" standalone="no"?>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#82ae64" fill-opacity="1" d="M0,192L60,186.7C120,181,240,171,360,192C480,213,600,267,720,240C840,213,960,107,1080,58.7C1200,11,1320,21,1380,26.7L1440,32L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+    <img src="celular1.png" class="imagem2 celular-image">
+
   <footer>
     <div class="footer-content">
         <div class="footer-section">
