--- a/ecotech2/src/main/resources/templates/index.html
+++ b/ecotech2/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
   <header></header>
   <header class="black">
     <!-- Logo -->
-    <img src="logo.png" alt="Logo" class="logo">
+    <img src="/img/logo.png" alt="Logo" class="logo">
     <!-- Menu -->
     <nav>
       <a href="recursos.html">Recursos</a>
@@ -34,7 +34,7 @@
       <p class="texto1"> Mais que um aplicativo, uma comunidade comprometida <br> com a sustentabilidade. 
       <br> Facilitamos a busca por pontos de coleta, promovendo <br> práticas ecológicas, incentivando mudanças positivas. </p>
     </div>
-    <img src="logoeco.png" alt="Logo Eco" class="logo-eco">
+    <img src="/img/logoeco.png" alt="Logo Eco" class="logo-eco">
   </div>
   <br><br><br><br><br><br><br><br><br>
   <div class="slide-navigation">
@@ -43,19 +43,19 @@
 </div>
   <div class="slideshow-container">
     <div class="mySlides fade">
-      <img src="imagem1.png" alt="Imagem 1">
+      <img src="/img/imagem1.png" alt="Imagem 1">
       <div class="slide-text" style="font-size: 150%;">Localização simples e rápida </div>
       <div class="slide-text2" style="top:-15%">Encontre pontos de coleta próximos em questão de segundos</div>
     </div>
   
     <div class="mySlides fade">
-      <img src="imagem2.png" alt="Imagem 2">
+      <img src="/img/imagem2.png" alt="Imagem 2">
       <div class="slide-text" style="font-size: 150%;">Detalhes abrangentes </div>
       <div class="slide-text2" style="top:-15%"> Informações detalhadas sobre cada ponto de coleta </div>
     </div>
   
     <div class="mySlides fade">
-      <img src="imagem3.png" alt="Imagem 3">
+      <img src="/img/imagem3.png" alt="Imagem 3">
       <div class="slide-text" style="font-size: 150%;">Descubra o caminho certo </div>
       <div class="slide-text2" style="top:-15%">Identifique o grupo de reciclagem para seus resíduos </div>
     </div>
@@ -76,7 +76,7 @@
       Junte-se à comunidade EcoTech - Baixe agora e embarque nesta jornada rumo a um futuro mais sustentável! 🌳🌏</h5>
     </div>
   
-    <img src="celular1.png" class="imagem2 celular-image">
+    <img src="/img/celular1.png" class="imagem2 celular-image">
 
   <footer>
     <div class="footer-content">
