--- a/ecotech2/src/main/resources/templates/intranet/perfil/TelaPerfil.html
+++ b/ecotech2/src/main/resources/templates/intranet/perfil/TelaPerfil.html
@@ -37,6 +37,7 @@
                 <a href="/ecotech/cliente/editar">Editar</a><br>
                 <a href="/ecotech/cliente/logout" id="logOut">LogOut</a><br>
                 <a href="/ecotech/cliente/excluir" id="logOut">Excluir conta</a><br>
+                <span th:if="${c.nivelAcesso}=='ADMIN'" th:text="criar perfil de usuário"></span>
             </div>
             <div id="profile_infsBox"> 
                 <h1>Seu perfil</h1>
