--- a/ecotech2/src/main/resources/templates/intranet/novo-local.html
+++ b/ecotech2/src/main/resources/templates/intranet/novo-local.html
@@ -37,9 +37,9 @@
 
 	<main>
 		<br><br>
-		<form action="#" th:action="@{/ecotech/locais/add-local}" style="padding: 30%; padding-top:0%; padding-right: 30%; padding-bottom:0%" th:object="${local}" method="post">
+		<form action="#" th:action="@{/ecotech/locais/add-local}" class="borda"th:object="${local}" method="post">
 		
-			<div class="row">
+			<div class="row" >
 				<div class="form-group col-md-12">
 					<label for="nome" class="col-form-label">Nome:</label>
 					<input type="text" th:field="*{nome}" class="form-control" id="nome" placeholder="Nome">
