--- a/ecotech2/src/main/resources/templates/donoEcoponto/login.html
+++ b/ecotech2/src/main/resources/templates/donoEcoponto/login.html
@@ -21,7 +21,7 @@
         <br><br>
     </header>
 
-    <main>
+    <main th:each="c : ${problem}">
         <br><br><br><br><br><br>
         <div class="login-box">
             <h2 class="login-title">Insira seu E-mail para se cadastrar ou entrar</h2><br>
@@ -38,7 +38,7 @@
                     
                 </div>
 
-                <br><br><br><br>
+                <br><br> <span th:if="${c}==true" > <span style="color:red;" >Login ou senha errados</span> <br><br>
 
                 <input type="submit" value="continuar" class="login_button">
             </form><br><br><br>
